MCKIN-10545 | Branding logo and Profile image alignment issue resolved (for small screens). (#2877)
Branding logo and Profile image alignment issue resolved.

--- a/static_v2/scss/_biapp.scss
+++ b/static_v2/scss/_biapp.scss
@@ -979,7 +979,7 @@ body.rtl {
     .logo {
       .topRightArea {
         .profileArea {
-          @include margin-left(15px);
+          @include margin-left(5px);
           .dropdown-menu {
             &:after {
               @include right(7px !important);
